service.yml
apiVersion: v1
kind: Service
metadata:
  name: pred-service
  namespace: third
spec:
  type: NodePort
  selector:
    app: python-webapp
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31700
